--- a/recipes/templates/recipes/pages/search.html
+++ b/recipes/templates/recipes/pages/search.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}Home |{% endblock title %}
+{% block title %}{{ page_title }}{% endblock title %}
 
 {% block content %}
 <div class="main-content main-content-list container">
 {% for recipe in recipes %}
     {% include 'recipes/partials/recipe.html' %}
-{% empty %} 
+{% empty %}
     <div class="center m-y">
         <h1>No recipes found here 🥲</h1>
     </div>
