--- a/recipes/templates/recipes/partials/header.html
+++ b/recipes/templates/recipes/partials/header.html
@@ -2,8 +2,8 @@
         <div class="main-container container">
             <h1>
                 <a class="main-logo" href="{% url 'recipes:home'%}">
-                    <i class="fas fa-utensils main-logo-icon"></i>
-                    <span class="main-logo-text">Recipes</span>
+                    <i class="fab fa-python main-logo-icon"></i>
+                    <span class="main-logo-text">CURSO DJANGO</span>
                 </a>
             </h1>
     </header>
